Fix unreadable asides

--- a/assets/styles/chat.less
+++ b/assets/styles/chat.less
@@ -7,10 +7,10 @@
 
 .content .chat aside {
   float: right;
-  font-style: italic;
   width: 30%;
   padding-left: 1em;
   font-size: 0.8em;
+  color: #a8a8a8;
 }
 
 .content .chat dt {
